# portfolio-project_sys

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
back/: api_urls.py  asgi.py  urls.py  wsgi.py
back/apps/courses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/apps/courses/migrations/: 0001_initial.py
back/apps/users/: admin.py  apps.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
back/apps/users/migrations/: 0001_initial.py  0002_auto_20231215_1057.py
back/settings/: base.py  dev.py  localhost.py  prod.py
